--- a/888repair/Views/Repair/ProblemListIndex.cshtml
+++ b/888repair/Views/Repair/ProblemListIndex.cshtml
@@ -245,7 +245,7 @@
     }
 
     layui.use(['table', 'dropdown', 'form', 'laydate'], function () {
-
+        var loading = layer.msg('页面加载中......');
         var $ = layui.$;
         var table = layui.table;
         var form = layui.form;
@@ -336,7 +336,10 @@
                                     templet: "<div>{{ formatDate(d.FinishTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
                                 }
 
-                            ]]
+                            ]],
+                            done: function () {
+                                layer.close(loading);
+                            }
                         });
                     });
                 } else {
