--- a/888repair/Views/Kind/KindMatchIndex.cshtml
+++ b/888repair/Views/Kind/KindMatchIndex.cshtml
@@ -119,7 +119,7 @@
 <script>
 
     layui.use(['table', 'dropdown', 'form'], function () {
-
+        var loading = layer.msg('页面加载中......');
         var $ = layui.$;
         var table = layui.table;
         var form = layui.form;
@@ -240,7 +240,10 @@
                                 //    field: 'UpdateTime', title: '操作时间', width: 200,
                                 //    templet: "<div>{{ formatDate(d.UpdateTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
                                 //}
-                            ]]
+                            ]],
+                            done: function () {
+                                layer.close(loading);
+                            }
                         });
                     });
                 } else {
