--- a/888repair/Views/Repair/ProblemAllDetailVw.cshtml
+++ b/888repair/Views/Repair/ProblemAllDetailVw.cshtml
@@ -219,8 +219,20 @@
     </form>
 </div>
 <script>
+    layui.use(['table', 'upload',  'dropdown', 'form'], function () {
+        var $ = layui.$;
+        var table = layui.table;
+        var form = layui.form;
+        var layer = layui.layer;
+        var upload = layui.upload;
 
-    function queryDetailVw(RepairId) {
+
+        var newURL = '@(Session["URL"])';
+        var dd = newURL.split('?');
+        var dd1 = dd[1];
+        queryDetailVw(dd1);
+
+         function queryDetailVw(RepairId) {
         var loading = layer.msg('页面加载中......');
          $.ajax({
              url: "@(Url.Action("getRepairDetail", "Repair"))",
@@ -253,10 +265,17 @@
                  localStorage.setItem("DamageClass", res.DamageClass);
                  localStorage.setItem("DamageName", res.DamageName);
                  localStorage.setItem("ReplyPhoto", res.ReplyPhoto);
-                 //原窗口打开新页面
-                 @*var url = "@(Url.Action("ProblemAllDetailVw", "Repair"))" + "?RepairId=" + RepairId;;
-                 $("#content").load(url);*@
 
+                 if (res.DamageReason == "natural cause(自然)") {
+                     $("#DamageText1").hide();
+                     $("#DamageTex2").hide();
+                 } else {
+                     $("#DamageText1").show();
+                     $("#DamageText2").show();
+                 }
+
+                 loadImg(res.PhotoPath, res.ReplyPhoto);
+                 
                  $("#RepairId").html(localStorage.getItem("RepairId"));
                  $("#ResponseContent").html(localStorage.getItem("ResponseContent") == "null" ? '' : localStorage.getItem("ResponseContent"));
                  $("#SystemCategory").html(localStorage.getItem("SystemCategory"));
@@ -284,59 +303,45 @@
          });
     }
 
-    function loadImg() {
-        //遍历图片 PhotoPath
-        if (localStorage.getItem("PhotoPath") != null && localStorage.getItem("PhotoPath") != '' && localStorage.getItem("PhotoPath") != 'null') {
-          //  var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
-            var PhotoPathS = localStorage.getItem("PhotoPath");
-            PhotoPathS = PhotoPathS.substring(0, PhotoPathS.length - 1);
-            var files = PhotoPathS.split(";");
-            var imgId = document.getElementById("imgId");
-           // var url = root;
-            for (var i = 0; i < files.length; i++) {
-                var name = files[i];
-                var img = document.createElement("img");
-                img.style = "width:120px;height:120px;";
-                img.className = "imgview";
-                img.src = "../" + name;
-                imgId.appendChild(img);
+        function loadImg(PhotoPath,ReplyPhoto) {
+            //遍历图片 PhotoPath
+            if (PhotoPath != null && PhotoPath != '' && PhotoPath != 'null') {
+                //  var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
+                var PhotoPathS = PhotoPath;
+                PhotoPathS = PhotoPathS.substring(0, PhotoPathS.length - 1);
+                var files = PhotoPathS.split(";");
+                var imgId = document.getElementById("imgId");
+                // var url = root;
+                for (var i = 0; i < files.length; i++) {
+                    var name = files[i];
+                    var img = document.createElement("img");
+                    img.style = "width:120px;height:120px;";
+                    img.className = "imgview";
+                    img.src = "../" + name;
+                    imgId.appendChild(img);
+                }
+            }
+
+            if (ReplyPhoto != null && ReplyPhoto != '' && ReplyPhoto != 'null') {
+                //  var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
+                var ReplyPhotoS = ReplyPhoto;
+                ReplyPhotoS = ReplyPhotoS.substring(0, ReplyPhotoS.length - 1);
+                var files2 = ReplyPhotoS.split(";");
+                var imgId2 = document.getElementById("imgId2");
+                // var url = root;
+                for (var i = 0; i < files2.length; i++) {
+                    var name2 = files2[i];
+                    var img2 = document.createElement("img");
+                    img2.style = "width:120px;height:120px;";
+                    img2.className = "imgview";
+                    img2.src = "../" + name2;
+                    imgId2.appendChild(img2);
+                }
             }
         }
 
-        if (localStorage.getItem("ReplyPhoto") != null && localStorage.getItem("ReplyPhoto") != '' && localStorage.getItem("ReplyPhoto") != 'null') {
-            // var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
-            var ReplyPhotoS = localStorage.getItem("ReplyPhoto");
-            ReplyPhotoS = ReplyPhotoS.substring(0, ReplyPhotoS.length - 1);
-            var files2 = ReplyPhotoS.split(";");
-            var imgId2 = document.getElementById("imgId2");
-            // var url = root;
-            for (var i = 0; i < files2.length; i++) {
-                var name2 = files2[i];
-                var img2 = document.createElement("img");
-                img2.style = "width:120px;height:120px;";
-                img2.className = "imgview";
-                img2.src = "../" + name2;
-                imgId2.appendChild(img2);
-            }
-        }
-    }
-
-
-    layui.use(['table', 'upload',  'dropdown', 'form'], function () {
-        var $ = layui.$;
-        var table = layui.table;
-        var form = layui.form;
-        var layer = layui.layer;
-        var upload = layui.upload;
 
         loadOption();
-
-        var newURL = '@(Session["URL"])';
-        var dd = newURL.split('?');
-        var dd1 = dd[1];
-        queryDetailVw(dd1);
-
-        loadImg();
 
         var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
         var empno = '@(Session["EmpNo"])';
@@ -404,16 +409,18 @@
 
 
         //隐藏div
-        $("#DamageText1").hide();
-        $("#DamageText2").hide();
+        //$("#DamageText1").hide();
+        //$("#DamageText2").hide();
 
-        if (localStorage.getItem("DamageReason") =="natural cause(自然)") {
-            $("#DamageText1").hide();
-            $("#DamageTex2").hide();
-        } else{
-            $("#DamageText1").show();
-            $("#DamageText2").show();
-        }
+        //if (localStorage.getItem("DamageReason") == "natural cause(自然)") {
+        //    alert("111");
+        //    $("#DamageText1").hide();
+        //    $("#DamageTex2").hide();
+        //} else {
+        //    alert("222");
+        //    $("#DamageText1").show();
+        //    $("#DamageText2").show();
+        //}
 
         //隐藏上传完修图片的div
         form.on('select(OpStatus)', function (data) {
@@ -424,31 +431,6 @@
                 $("#replyPic").hide();
             }
         })
-
-        if (localStorage.getItem("Status") == "complete" || localStorage.getItem("Status") == "rejectend" ) {
-            $('#OpStatus').addClass("layui-disabled").attr("disabled", "disabled");
-            $('#TransferProblem').addClass("layui-disabled").attr("disabled", "disabled");
-            $('#RejectTask').addClass("layui-disabled").attr("disabled", "disabled");
-            $('#RejectEnd').addClass("layui-disabled").attr("disabled", "disabled");
-            $('#btn_submit').addClass("layui-disabled").attr("disabled", "disabled");
-            $('#NewReplyContent').addClass("layui-disabled").attr("readonly", "readonly");
-        } else {
-            $('#OpStatus').removeClass("layui-disabled").removeAttr("disabled", "disabled");
-            $('#TransferProblem').removeClass("layui-disabled").removeAttr("disabled", "disabled");
-            $('#RejectTask').removeClass("layui-disabled").removeAttr("disabled", "disabled");
-            $('#RejectEnd').removeClass("layui-disabled").removeAttr("disabled", "disabled");
-            $('#btn_submit').removeClass("layui-disabled").removeAttr("disabled", "disabled");
-            $('#NewReplyContent').removeClass("layui-disabled").removeAttr("disabled", "disabled");
-        }
-        
-        //当前用户为负责人 则显示按钮组
-        var logusername = '@(Session["fullname"])';
-        if (logusername == localStorage.getItem("ChargeEmpname")) {
-            $("#btngroup").show();
-        } else
-        {
-            $("#btngroup").hide();
-        }
         
         form.on('submit(demo1)', function () {
             var filesUpload = $("#buttonDiv");
