--- a/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
+++ b/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
@@ -261,7 +261,22 @@
     </form>
 </div>
 <script>
-    function queryDetailVw(RepairId) {
+    
+
+    layui.use(['table', 'upload', 'dropdown', 'form'], function () {
+        var $ = layui.$;
+        var table = layui.table;
+        var form = layui.form;
+        var layer = layui.layer;
+        var upload = layui.upload;
+
+        
+        var newURL = '@(Session["URL"])';
+        var dd = newURL.split('?');
+        var dd1 = dd[1];
+        queryDetailVw(dd1);
+
+        function queryDetailVw(RepairId) {
         var loading = layer.msg('页面加载中......');
          $.ajax({
              url: "@(Url.Action("getRepairDetail", "Repair"))",   // 要提交的URL路径
@@ -269,53 +284,29 @@
              data: { RepairId: RepairId },
              dataType: "JSON",     // 指定传输的数据格式
              success: function (res) {
-                 //取到的数据存储到localStorage
-                 localStorage.clear();
-                 localStorage.setItem("RepairId", res.RepairId);
-                 localStorage.setItem("Stu_Name", res.Stu_Name);
-                 localStorage.setItem("SystemCategory", res.SystemCategory);
-                 localStorage.setItem("Building", res.Building);
-                 localStorage.setItem("Loaction", res.Loaction);
-                 localStorage.setItem("ChargeEmpno", res.ChargeEmpno);
-                 localStorage.setItem("ChargeEmpname", res.ChargeEmpname);
-                 localStorage.setItem("Category", res.Category);
-                 localStorage.setItem("ResponseContent", res.ResponseContent);
-                 localStorage.setItem("ResponseEmpname", res.ResponseEmpname);
-                 localStorage.setItem("ReplyContent", res.ReplyContent);
-                 localStorage.setItem("Status", res.Status);
-                 localStorage.setItem("CreatTime", res.CreatTime);
-                 localStorage.setItem("FinishTime", res.FinishTime);
-                 localStorage.setItem("PhotoPath", res.PhotoPath);
-                 localStorage.setItem("RoomNum", res.RoomNum);
-                 localStorage.setItem("RepairTime", res.RepairTime);
-                 localStorage.setItem("Telephone", res.Telephone);
-                 localStorage.setItem("DamageReason", res.DamageReason);
-                 localStorage.setItem("DamageClass", res.DamageClass);
-                 localStorage.setItem("DamageName", res.DamageName); 
-                 localStorage.setItem("ReplyPhoto", res.ReplyPhoto);
-                 //原窗口打开新页面
-                 @*var url = "@(Url.Action("ReplyRepairDetailVw", "Repair"))" + "?RepairId=" + RepairId;;
-                 $("#content").load(url);*@
+                 $("#RepairId").html(res.RepairId);
+                 $("#ResponseContent").html(res.ResponseContent == "null" ? '' : res.ResponseContent);
+                 $("#SystemCategory").html(res.SystemCategory);
+                 $("#Building").html(res.Building);
+                 $("#Loaction").html(res.Loaction);
+                 $("#ChargeEmpname").html(res.ChargeEmpname);
+                 $("#RoomNum").html(res.RoomNum);
+                 $("#ResponseEmpname").html(res.ResponseEmpname);
+                 $("#Telephone").html(res.Telephone);
+                 $("#RepairTime").html(res.RepairTime == "null" ? '' : res.RepairTime);
+                 $("#Category").html(res.Category);
+                 $("#DamageReason").html(res.DamageReason);
+                 $("#DamageClass").html(res.DamageClass);
+                 $("#DamageName").html(res.DamageName);
+                 $("#CreatTime").html(formatDate(res.CreatTime, 'yyyy-MM-dd HH:mm:ss'));
+                 $("#ReplyContent").html(res.ReplyContent == "null" ? '' : res.ReplyContent);
+                 $("#FinishTime").html(res.FinishTime == "null" ? '' : formatDate(res.FinishTime, 'yyyy-MM-dd HH:mm:ss'));
+                 //  console.log(localStorage);
 
-                 $("#RepairId").html(localStorage.getItem("RepairId"));
-                 $("#ResponseContent").html(localStorage.getItem("ResponseContent") == "null" ? '' : localStorage.getItem("ResponseContent"));
-                 $("#SystemCategory").html(localStorage.getItem("SystemCategory"));
-                 $("#Building").html(localStorage.getItem("Building"));
-                 $("#Loaction").html(localStorage.getItem("Loaction"));
-                 $("#ChargeEmpname").html(localStorage.getItem("ChargeEmpname"));
-                 $("#RoomNum").html(localStorage.getItem("RoomNum"));
-                 $("#ResponseEmpname").html(localStorage.getItem("ResponseEmpname"));
-                 $("#Telephone").html(localStorage.getItem("Telephone"));
-                 $("#RepairTime").html(localStorage.getItem("RepairTime") == "null" ? '' : localStorage.getItem("RepairTime"));
-                 $("#Category").html(localStorage.getItem("Category"));
-                 $("#DamageReason").html(localStorage.getItem("DamageReason"));
-                 $("#DamageClass").html(localStorage.getItem("DamageClass"));
-                 $("#DamageName").html(localStorage.getItem("DamageName"));
-                 $("#CreatTime").html(formatDate(localStorage.getItem("CreatTime"), 'yyyy-MM-dd HH:mm:ss'));
-                 $("#ReplyContent").html(localStorage.getItem("ReplyContent") == "null" ? '' : localStorage.getItem("ReplyContent"));
-                 $("#FinishTime").html(localStorage.getItem("FinishTime") == "null" ? '' : formatDate(localStorage.getItem("CreatTime"), 'yyyy-MM-dd HH:mm:ss'));
+                 loadImg(res.PhotoPath, res.ReplyPhoto);
+                 loadOption(res.SystemCategory, res.Status, res.ChargeEmpname);
+
                  layer.close(loading);
-                 //localStorage.clear();
              },
              error: function () {
                  console.log("失败");
@@ -325,11 +316,11 @@
          });
      }
 
-    function loadImg() {
+    function loadImg(PhotoPath, ReplyPhoto) {
         //遍历图片 PhotoPath
-        if (localStorage.getItem("PhotoPath") != null && localStorage.getItem("PhotoPath") != '' && localStorage.getItem("PhotoPath") != 'null') {
-           // var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
-            var PhotoPathS = localStorage.getItem("PhotoPath");
+        if (PhotoPath != null && PhotoPath != '' && PhotoPath != 'null') {
+            //  var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
+            var PhotoPathS = PhotoPath;
             PhotoPathS = PhotoPathS.substring(0, PhotoPathS.length - 1);
             var files = PhotoPathS.split(";");
             var imgId = document.getElementById("imgId");
@@ -344,9 +335,9 @@
             }
         }
 
-        if (localStorage.getItem("ReplyPhoto") != null && localStorage.getItem("ReplyPhoto") != '' && localStorage.getItem("ReplyPhoto") != 'null') {
+        if (ReplyPhoto != null && ReplyPhoto != '' && ReplyPhoto != 'null') {
             // var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
-            var ReplyPhotoS = localStorage.getItem("ReplyPhoto");
+            var ReplyPhotoS = ReplyPhoto;
             ReplyPhotoS = ReplyPhotoS.substring(0, ReplyPhotoS.length - 1);
             var files2 = ReplyPhotoS.split(";");
             var imgId2 = document.getElementById("imgId2");
@@ -362,35 +353,18 @@
         }
     }
 
-
-    layui.use(['table', 'upload', 'dropdown', 'form'], function () {
-        var $ = layui.$;
-        var table = layui.table;
-        var form = layui.form;
-        var layer = layui.layer;
-        var upload = layui.upload;
-
-        loadOption();
-
         var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
         var empno = '@(Session["EmpNo"])';
 
-        var newURL = '@(Session["URL"])';
-        var dd = newURL.split('?');
-        var dd1 = dd[1];
-        queryDetailVw(dd1);
-
-        loadImg();
         
         $("body").on("click", ".imgview", function (e) {
             layer.photos({ photos: { "data": [{ "src": e.target.src }] } });
         });
 
-        function loadOption() {
+        function loadOption(SystemCategory, Status, ChargeEmpname) {  
             $("#OpStatus").empty();
-            var SystemCategory = localStorage.getItem("SystemCategory");
             if (SystemCategory == null || SystemCategory == "") {
-                loadOption();
+                alert("执行状态请求异常");
             } else {
                 $.ajax({
                     type: "post",
@@ -407,7 +381,7 @@
                                 $("#OpStatus").append(`<option value="${result[i].StatusValue}">${result[i].StatusText}</option>`);
                             }
                         }
-                        $('select[name=OpStatus]').val(localStorage.getItem("Status"));
+                        $('select[name=OpStatus]').val(Status);
                         form.render();
                     }, error: function () {
                         layer.alert('请求失败');
@@ -416,9 +390,8 @@
             }
 
             $("#OpEmpNo").empty();
-            var SystemCategory = localStorage.getItem("SystemCategory");
             if (SystemCategory == null || SystemCategory == "") {
-                loadOption();
+                alert("请求异常");
             } else {
                 $.ajax({
                     type: "post",
@@ -429,7 +402,7 @@
                         $('#OpEmpNo').append(new Option());
                         for (let i = 0, len = result.length; i < len; i++)
                         {
-                            if (result[i].FullName == localStorage.getItem("ChargeEmpname")) {
+                            if (result[i].FullName == ChargeEmpname) {
                                 $("#OpEmpNo").append(`<option value="${result[i].EmpNo}" disabled="">${result[i].FullName}</option>`);
                             } else {
                                 $("#OpEmpNo").append(`<option value="${result[i].EmpNo}">${result[i].FullName}</option>`);
