--- a/888repair/Views/Repair/ProblemAllVw.cshtml
+++ b/888repair/Views/Repair/ProblemAllVw.cshtml
@@ -255,8 +255,10 @@
         var logGroupName = '@(Session["GroupName"])'
         if (logGroupName == "资讯") {
             $("#OpSystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $('select[name=OpSystemCategory]').val('IT(资讯类)');
         } else if (logGroupName == "后勤") {
             $("#OpSystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+            $('select[name=OpSystemCategory]').val('Logistics(总务后勤类)');
         } else if (logGroupName == "管理者") {
             $("#OpSystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
             $("#OpSystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
