fix权限管控。fix邮件英文

--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -146,12 +146,14 @@
             $('#kindMatch').show();
             $('#dataRepair').show();
             $('#ProblemRepair').show();
+            $('#count').show();
         } else
         {
             $('#areaMatch').hide();
             $('#kindMatch').hide();
             $('#dataRepair').hide();
             $('#ProblemRepair').hide();
+            $('#count').hide();
         }
 
         if (logviewer == "1") {
