--- a/888repair/Views/Repair/LogRepairVw.cshtml
+++ b/888repair/Views/Repair/LogRepairVw.cshtml
@@ -171,7 +171,7 @@
                 <div class="layui-inline" style="width:200%">
                     <label class="layui-form-label layui-input-inline"></label>
                     <div class="layui-input-inline" style="width:60%;margin-left:0">
-                        <label class="layui-form-label layui-input-inline">Mon(period)星期二(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        <label class="layui-form-label layui-input-inline">Tue(period)星期二(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                         <input type="checkbox" value="星期2的第1节" lay-skin="primary" title="One">
                         <input type="checkbox" value="星期2的第2节" lay-skin="primary" title="Two">
                         <input type="checkbox" value="星期2的第3节" lay-skin="primary" title="Three">
@@ -189,7 +189,7 @@
                 <div class="layui-inline" style="width:200%">
                     <label class="layui-form-label layui-input-inline"></label>
                     <div class="layui-input-inline" style="width:60%;margin-left:0">
-                        <label class="layui-form-label layui-input-inline">Mon(period)星期三(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        <label class="layui-form-label layui-input-inline">Wen(period)星期三(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                         <input type="checkbox" value="星期3的第1节" lay-skin="primary" title="One">
                         <input type="checkbox" value="星期3的第2节" lay-skin="primary" title="Two">
                         <input type="checkbox" value="星期3的第3节" lay-skin="primary" title="Three">
@@ -207,7 +207,7 @@
                 <div class="layui-inline" style="width:200%">
                     <label class="layui-form-label layui-input-inline">repair time(维护时段)：<span style="color:red">*</span></label>
                     <div class="layui-input-inline" style="width:60%;margin-left:0">
-                        <label class="layui-form-label layui-input-inline">Mon(period)星期四(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        <label class="layui-form-label layui-input-inline">Thurs(period)星期四(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                         <input type="checkbox" name="repairTime" value="星期4的第1节" lay-skin="primary" title="One">
                         <input type="checkbox" name="repairTime" value="星期4的第2节" lay-skin="primary" title="Two">
                         <input type="checkbox" name="repairTime" value="星期4的第3节" lay-skin="primary" title="Three">
@@ -225,7 +225,7 @@
                 <div class="layui-inline" style="width:200%">
                     <label class="layui-form-label layui-input-inline"></label>
                     <div class="layui-input-inline" style="width:60%;margin-left:0">
-                        <label class="layui-form-label layui-input-inline">Mon(period)星期五(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        <label class="layui-form-label layui-input-inline">Fri(period)星期五(节次)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                         <input type="checkbox" value="星期5的第1节" lay-skin="primary" title="One">
                         <input type="checkbox" value="星期5的第2节" lay-skin="primary" title="Two">
                         <input type="checkbox" value="星期5的第3节" lay-skin="primary" title="Three">
