fix统计页面系统类别选项；增加说明文件预览

--- a/888repair/Views/Count/CountIndex.cshtml
+++ b/888repair/Views/Count/CountIndex.cshtml
@@ -101,6 +101,8 @@
         } else if (logGroupName == "管理者") {
             $("#SystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
             $("#addSystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $("#SystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+            $('select[name=SystemCategory]').val('Logistics(总务后勤类)');
         }
 
         function loadDepartmentCount()
