--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item layui-hide layui-show-md-inline-block">
                     <a href="javascript:;">
-                       <span id="username"></span>
+                        <span id="username"></span>
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a id="btn_logout">Sign out</a></dd>
@@ -51,8 +51,11 @@
                 <ul class="layui-nav layui-nav-tree Menu" lay-filter="test" id="Menu">
                     <li class="layui-nav-item current" data-id="fill"><a class="layui-nav-item ">填写问题</a></li>
                     <li class="layui-nav-item current" data-id="personalProblem"><a class="layui-nav-item ">个人问题列表</a></li>
+                    <li class="layui-nav-item current" id="btn_view"><a class="layui-nav-item ">说明文件</a></li>
+                    <li><a>&nbsp;</a></li>
                     <li id="replyProblem" class="layui-nav-item current" data-id="replyProblem"><a class="layui-nav-item ">回复问题</a></li>
                     <li id="listProblem" class="layui-nav-item current" data-id="listProblem"><a class="layui-nav-item ">问题列表</a></li>
+                    <li><a>&nbsp;</a></li>
                     <li id="ProblemRepair" class="layui-nav-item current" data-id="ProblemRepair"><a class="layui-nav-item ">问题列表维护</a></li>
                     <li id="areaMatch" class="layui-nav-item" data-id="areaMatch"><a class="layui-nav-item ">辖区配对维护</a></li>
                     <li id="kindMatch" class="layui-nav-item" data-id="kindMatch"><a class="layui-nav-item ">业管配对维护</a></li>
@@ -70,11 +73,12 @@
                 </ul>
             </div>
         </div>
+        <iframe src="" id="iframe" frameborder="0"></iframe>
 
         <div class="layui-body" style="margin-bottom:100px">
             <!-- 内容主体区域 -->
             <div style="padding: 15px;" id="content">
-               
+
             </div>
         </div>
         <div class="layui-footer">
@@ -105,6 +109,21 @@
             , layer = layui.layer
             , util = layui.util
             , $ = layui.$;
+
+        $('#btn_view').click(function () {
+
+            layui.layer.open({
+                title: '文件预览',
+                type: 2,
+                area: ['90%', '100%'], // 弹出框的宽高
+                fixed: false, // 是否固定
+                maxmin: true, // 是否允许最大化
+                shade: 0, // 隐藏弹框的遮罩层
+                //content: 'http://localhost:57616/888报修系统操作文档.pdf' // pdf的地址
+                content: 'http://192.168.80.148/888repair_ksnorth/888报修系统操作文档.pdf' // pdf的地址
+            })
+        });
+
     });
 
     //var language = localStorage.getItem('language');
